--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
-version: '3.8'
-
 services:
   news_crawler:
     # 1. 构建配置
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        APT_MIRROR: ${APT_MIRROR:-mirrors.tuna.tsinghua.edu.cn}
+        PIP_INDEX_URL: ${PIP_INDEX_URL:-https://pypi.tuna.tsinghua.edu.cn/simple}
+        PIP_TRUSTED_HOST: ${PIP_TRUSTED_HOST:-pypi.tuna.tsinghua.edu.cn}
       network: host
       
     container_name: news_crawler
@@ -13,22 +15,20 @@ services:
 
     # 2. 路径映射
     volumes:
-      - ./code:/app/code:rw
       - ./logs:/app/logs:rw
-      - ./pytest.ini:/app/pytest.ini:ro
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
 
     # 3. 环境变量（从本地文件加载，避免把密钥提交到 GitHub）
-    # 复制并填写：./code/.env.example -> ./code/.env
+    # 复制并填写：./.env.example -> ./.env
     env_file:
-      - ./code/.env
+      - ./.env
 
     # 仍可在此覆盖少量固定项
     environment:
       TZ: Asia/Shanghai
       NO_PROXY: "127.0.0.1,localhost"
-      PYTHONPATH: /app/code
+      PYTHONPATH: /app
       PYTHONUNBUFFERED: "1"
 
     # 4. 网络模式
