将原本硬编码在 config.py 中的板块配置剥离到news_crawler/categories/*.toml 文件,新增一个板块只需要复制一个 .toml 文件，而不需要修改任何 Python 代码。

--- a/.gitignore
+++ b/.gitignore
@@ -48,5 +48,8 @@ data/
 # Generated
 repomix-output.xml
 
+# Cron env export (generated)
+.docker_env
+
 # Docker overrides
 docker-compose.override.yml
