将板块模块化

--- a/.env.example
+++ b/.env.example
@@ -49,8 +49,11 @@ MAIL_PORT=465
 MAIL_USER=your@qq.com
 MAIL_PASS=your-smtp-auth-code
 MAIL_TO=receiver@qq.com
-MAIL_FROM_NAME=AI情报员
-MAIL_TO_NAME=订阅者
+MAIL_FROM_NAME="AI情报员"
+MAIL_TO_NAME="订阅者"
+
+# -------------------- WEBHOOK_URL ----------------
+WEBHOOK_URL="https://example.com/webhook"
 
 # -------------------- AI (OpenAI compatible) -----
 AI_URL=https://dashscope.aliyuncs.com/compatible-mode/v1/
