--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,28 @@
 [pytest]
-addopts = -m "not live"
+# Default: skip live tests (require network, credentials, etc.)
+addopts = -m "not live" --strict-markers --tb=short -v
+
+# Test markers
 markers =
-    live: marks tests as live network tests (deselect with '-m "not live"')
+    live: marks tests as live network tests requiring real credentials (deselect with '-m "not live"')
+    unit: marks tests as unit tests (fast, no external dependencies)
+    integration: marks tests as integration tests
+
+# Pytest configuration
+testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+
+# Warning filters
 filterwarnings =
     ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
+
+# Coverage options (if pytest-cov is installed)
+# Run with: pytest --cov=news_crawler
+[coverage:run]
+omit = 
+    tests/*
+    */conftest.py
+    */__init__.py
