fix: Correct docker-compose.yml syntax and __init__.py exports
Critical fixes for configuration errors:

## 1. docker-compose.yml (Critical)
- ❌ Fixed: Environment variables incorrectly nested under networks.ipam
- ✅ Moved PYTHONPATH, PYTHONUNBUFFERED, CONFIG_DIR to service.environment
- ✅ Moved logging config from networks to service level
- ✅ Removed duplicate network_mode: host (conflicts with networks)
- ✅ Validation: docker-compose config now passes

## 2. news_crawler/utils/__init__.py
- ❌ Fixed: Imported non-existent functions (safely_open_session, parse_date_flexible, extract_domain)
- ✅ Updated __all__ to match actual functions: compute_hash, chunker, truncate_text, setup_logger

## 3. news_crawler/dtos/__init__.py
- ❌ Fixed: Imported non-existent classes (RSSItem, CategoryConfig, etc.)
- ✅ Updated __all__ to match actual classes: ParsedItem, PseudoEntry

## Validation Results
✅ docker-compose config --quiet: PASS
✅ dtos imports: PASS (ParsedItem, PseudoEntry)
✅ utils imports: PASS (compute_hash, truncate_text)

These errors were introduced in the previous commit when adding __all__
declarations without verifying actual module exports.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,10 @@ services:
     environment:
       TZ: Asia/Shanghai
       NO_PROXY: "127.0.0.1,localhost"
+      PYTHONPATH: /app
+      PYTHONUNBUFFERED: "1"
+      # 指定外部配置目录路径
+      CONFIG_DIR: /app/config/categories
     
     # 健康检查
     healthcheck:
@@ -53,6 +57,13 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    
+    # 日志配置
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 # 网络配置
 networks:
@@ -61,17 +72,3 @@ networks:
     ipam:
       config:
         - subnet: 172.20.0.0/16
-      PYTHONPATH: /app
-      PYTHONUNBUFFERED: "1"
-      # 指定外部配置目录路径
-      CONFIG_DIR: /app/config/categories
-
-    # 4. 网络模式
-    network_mode: "host"
-    
-    # 5. 日志配置
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
