--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
         with:
           context: .
           push: false
+          load: true
           tags: rss-ai-news:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
