perf: Add timeout limits to GitHub Actions workflows
- lint-and-test job: 15 min timeout (was unlimited)
- docker-build job: 20 min timeout (was unlimited)
- Install dependencies: 5 min timeout per step
- Docker build step: 10 min timeout
- Code quality lint: 10 min timeout

Prevents workflows from hanging indefinitely and consuming runner resources.

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v4
       
@@ -18,6 +19,7 @@ jobs:
           python-version: '3.10'
           
       - name: Install dependencies
+        timeout-minutes: 5
         run: |
           pip install black ruff mypy
           pip install -e ".[test]"
