--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,13 +27,12 @@ jobs:
         timeout-minutes: 5
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[test]"
           pip install ruff
+          pip install -e ".[test]"
 
       - name: Lint with ruff
         run: |
-          ruff check news_crawler/ --output-format=github
-        continue-on-error: true
+          ruff check news_crawler tests --output-format=github
 
       - name: Run tests
         run: |
