--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,10 @@ dependencies = [
   "tenacity",
   "PyGithub",
   "lxml",
+  "lxml_html_clean",
   "openai",
   "python-dotenv",
+  "tomli; python_version < '3.11'",
 ]
 
 [project.optional-dependencies]
