--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,8 @@ exclude = '''
 [tool.ruff]
 line-length = 100
 target-version = "py310"
+
+[tool.ruff.lint]
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
@@ -71,7 +73,7 @@ ignore = [
     "C901",  # too complex (we've already optimized)
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]  # unused imports in __init__.py
 "tests/*" = ["S101"]       # assert allowed in tests
 
